
  - fix tests failing on 5.6.x due to differing DESTROY semantics

0.12
  - doc fixes

0.11
  - fix broken dist

0.10
  - clarify some docs

0.09
  - don't index Try::Tiny::ScopeGuard

0.08
  - fix require vs use issue in blead (RT63410)

0.07
  - allow multiple finally blocks
  - pass the error, if any, to finally blocks when called

0.06
  - in t/given_when.t use a plan instead of done_testing for more backwards
    compatibility

0.05
  - Documentation fixes and clarifications

0.04
  - Restore list context propagation for catch blocks
  - Fix a bug where finally blocks weren't always invoked

0.03
  - Support for 'finally' blocks (Andy Yates)
  - More documentation and tests (many people)
  - Sets $@ to the previous value at the beginning of the eval, to allow
    the capture of an error stack when calling die.

0.02
  - Doc fixes from chromatic
  - Various minor fixes from Adam Kennedy
  - Additional documentation and code clarifications
  - 5.005_04 compatibility

0.01
  - Initial release