@@ -46,3 +46,5 @@
 \.gitignore$
 
 MYMETA
+
+maint
