@@ -1,5 +1,6 @@
 
   - fix tests failing on 5.6.x due to differing DESTROY semantics
+  - excise superfluous local($@) call - 7% speedup
 
 0.12
   - doc fixes
